# calib-synth

./: README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: config_reference.md  manifest_reference.md
examples/: minimal_no_laser.yaml  minimal_with_laser.yaml  multicam_medium.yaml
src/synthcal/: __init__.py  api.py  cli.py  util.py
src/synthcal/camera/: __init__.py  model.py
src/synthcal/core/: __init__.py  geometry.py
src/synthcal/effects/: pipeline.py
src/synthcal/io/: config.py  generate.py  manifest.py
src/synthcal/render/: __init__.py  chessboard.py  gt.py
src/synthcal/scenario/: sampling.py
src/synthcal/targets/: __init__.py  chessboard.py
tests/: test_chessboard_render.py  test_cli.py  test_config_validation_and_api.py  test_effects.py  test_pose_sampling_constraints.py
